# QtProject

./: README.md
Mqtt/: Mqtt.pro  widget.cpp  widget.h  widget.ui
SendCharater/client/: CMakeLists.txt  main.cpp
SendCharater/client/include/: tcpSocket.h
SendCharater/client/src/: tcpSocket.cpp
SendCharater/mqtt/: CMakeLists.txt  main.cpp
SendCharater/mqtt/include/: mqttclient.h
SendCharater/mqtt/src/: mqttclient.cpp
SendCharater/server/: CMakeLists.txt  main.cpp
SendCharater/server/include/: tcpServer.h
SendCharater/server/src/: tcpServer.cpp
SendFIle/client/: widget.cpp  widget.h  widget.ui
SendFIle/server/: CMakeLists.txt  server.crt  server.csr  server.key  widget.cpp  widget.h  widget.ui
mqttClient/: Form.ui  main.cpp  maininterface.cpp  maininterface.h  mqttClient.pro  widget.cpp  widget.h  widget.ui
sendFile/Client/: Client.pro  client.cpp  client.h  main.cpp
sendFile/Server/: server.cpp  server.h
sendFile2/: test.txt
sendFile2/Client/: widget.cpp  widget.h  widget.ui
sendFile2/Server/: widget.cpp  widget.h  widget.ui
sendFile3/Client/: widget.cpp  widget.h  widget.ui
sendFile3/Server/: widget.cpp  widget.h  widget.ui
sendFile4/Client/: Client.pro  main.cpp  tcpclient.cpp  tcpclient.h
sendFile4/Server/: main.cpp  tcpserver.cpp  tcpserver.h
sha256/: CMakeLists.txt  main.cpp
